# TACO-Rusty

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
packaging/: nfpm.yaml
resources/: taco.desktop
resources/data/: .placeholder
resources/shaders/: connection.frag  connection.vert  crosshair.frag  crosshair.vert  shader.frag  shader.vert
src/: main.rs  resources.rs
src/audio/: mod.rs  sound_manager.rs
src/config/: mod.rs  taco_config.rs
src/core/: alert_trigger.rs  easing.rs  mod.rs  path_info.rs  pathfinder.rs  solar_system.rs  solar_system_manager.rs  system_stats.rs
src/intel/: local_watcher.rs  log_entry.rs  log_path_detector.rs  log_watcher.rs  mod.rs
src/rendering/: mod.rs  mouse_ray.rs  shader.rs  texture_loader.rs
src/ui/: app.rs  config_panel.rs  gl_map.rs  intel_panel.rs  mod.rs
